--- a/dataprep.ipynb
+++ b/dataprep.ipynb
@@ -496,8 +496,8 @@
        "Cancelled                998\n",
        "Transferred              169\n",
        "Ready to Renew           115\n",
-       "Lapsed                    25\n",
        "Deficient                 25\n",
+       "Lapsed                    25\n",
        "Ready to Batch Print      11\n",
        "Revoked                    7\n",
        "Pending                    3\n",
@@ -552,234 +552,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>SITE_ADDRESS</th>\n",
-       "      <th>ENTITY_NAME</th>\n",
-       "      <th>LICENSE_ISSUE_DATE</th>\n",
-       "      <th>LICENSE_START_DATE</th>\n",
-       "      <th>LICENSE_END_DATE</th>\n",
-       "      <th>LICENSECATEGORY</th>\n",
-       "      <th>LICENSESTATUS</th>\n",
-       "      <th>LATITUDE</th>\n",
-       "      <th>LONGITUDE</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>184581</th>\n",
-       "      <td>1454 P ST NW</td>\n",
-       "      <td>PHILLIPS SEAFOOD-P STREET LLC</td>\n",
-       "      <td>2019-06-17T00:00:00.000Z</td>\n",
-       "      <td>2019-06-01T00:00:00.000Z</td>\n",
-       "      <td>2021-05-31T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909455</td>\n",
-       "      <td>-77.034073</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45403</th>\n",
-       "      <td>1450 P ST NW</td>\n",
-       "      <td>Smoothie King Co, Inc.</td>\n",
-       "      <td>2019-02-14T00:00:00.000Z</td>\n",
-       "      <td>2018-12-01T00:00:00.000Z</td>\n",
-       "      <td>2022-11-30T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909408</td>\n",
-       "      <td>-77.033928</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154840</th>\n",
-       "      <td>1440 P ST NW</td>\n",
-       "      <td>WHOLE FOODS MARKET</td>\n",
-       "      <td>2018-11-14T00:00:00.000Z</td>\n",
-       "      <td>2018-12-01T00:00:00.000Z</td>\n",
-       "      <td>2020-11-30T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909492</td>\n",
-       "      <td>-77.033565</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>146894</th>\n",
-       "      <td>1418 P ST NW</td>\n",
-       "      <td>DISTRICT OF COLUMBIA CVS PHARMACY LLC</td>\n",
-       "      <td>2018-01-26T00:00:00.000Z</td>\n",
-       "      <td>2018-03-01T00:00:00.000Z</td>\n",
-       "      <td>2020-02-28T00:00:00.000Z</td>\n",
-       "      <td>Food Products</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909343</td>\n",
-       "      <td>-77.032850</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>154097</th>\n",
-       "      <td>1416 14TH ST NW</td>\n",
-       "      <td>ZL INC</td>\n",
-       "      <td>2019-06-13T00:00:00.000Z</td>\n",
-       "      <td>2019-07-01T00:00:00.000Z</td>\n",
-       "      <td>2021-06-30T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909440</td>\n",
-       "      <td>-77.032232</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>45475</th>\n",
-       "      <td>1415 14TH ST NW</td>\n",
-       "      <td>LALIBELA INC</td>\n",
-       "      <td>2018-04-27T00:00:00.000Z</td>\n",
-       "      <td>2018-05-01T00:00:00.000Z</td>\n",
-       "      <td>2020-04-30T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909490</td>\n",
-       "      <td>-77.031702</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>152335</th>\n",
-       "      <td>1414 14TH ST NW</td>\n",
-       "      <td>KINGFISHER</td>\n",
-       "      <td>2018-06-12T00:00:00.000Z</td>\n",
-       "      <td>2018-08-01T00:00:00.000Z</td>\n",
-       "      <td>2020-07-31T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909387</td>\n",
-       "      <td>-77.032224</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>39642</th>\n",
-       "      <td>1413 14TH ST NW</td>\n",
-       "      <td>1413 YUM'S CORPORATION</td>\n",
-       "      <td>2019-07-15T00:00:00.000Z</td>\n",
-       "      <td>2019-07-01T00:00:00.000Z</td>\n",
-       "      <td>2021-06-30T00:00:00.000Z</td>\n",
-       "      <td>Delicatessen</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909425</td>\n",
-       "      <td>-77.031698</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>41452</th>\n",
-       "      <td>1410 14TH ST NW</td>\n",
-       "      <td>IN STEREO LLC</td>\n",
-       "      <td>2017-10-26T00:00:00.000Z</td>\n",
-       "      <td>2017-12-01T00:00:00.000Z</td>\n",
-       "      <td>2019-11-30T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909274</td>\n",
-       "      <td>-77.032279</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>183510</th>\n",
-       "      <td>1410 14TH ST NW</td>\n",
-       "      <td>BLACK WHISKEY LLC</td>\n",
-       "      <td>2019-05-14T00:00:00.000Z</td>\n",
-       "      <td>2019-04-01T00:00:00.000Z</td>\n",
-       "      <td>2021-03-31T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Active</td>\n",
-       "      <td>38.909274</td>\n",
-       "      <td>-77.032279</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "            SITE_ADDRESS                            ENTITY_NAME  \\\n",
-       "184581     1454 P ST NW           PHILLIPS SEAFOOD-P STREET LLC   \n",
-       "45403      1450 P ST NW                  Smoothie King Co, Inc.   \n",
-       "154840     1440 P ST NW                      WHOLE FOODS MARKET   \n",
-       "146894     1418 P ST NW   DISTRICT OF COLUMBIA CVS PHARMACY LLC   \n",
-       "154097  1416 14TH ST NW                                  ZL INC   \n",
-       "45475   1415 14TH ST NW                            LALIBELA INC   \n",
-       "152335  1414 14TH ST NW                              KINGFISHER   \n",
-       "39642   1413 14TH ST NW                  1413 YUM'S CORPORATION   \n",
-       "41452   1410 14TH ST NW                           IN STEREO LLC   \n",
-       "183510  1410 14TH ST NW                       BLACK WHISKEY LLC   \n",
-       "\n",
-       "              LICENSE_ISSUE_DATE        LICENSE_START_DATE  \\\n",
-       "184581  2019-06-17T00:00:00.000Z  2019-06-01T00:00:00.000Z   \n",
-       "45403   2019-02-14T00:00:00.000Z  2018-12-01T00:00:00.000Z   \n",
-       "154840  2018-11-14T00:00:00.000Z  2018-12-01T00:00:00.000Z   \n",
-       "146894  2018-01-26T00:00:00.000Z  2018-03-01T00:00:00.000Z   \n",
-       "154097  2019-06-13T00:00:00.000Z  2019-07-01T00:00:00.000Z   \n",
-       "45475   2018-04-27T00:00:00.000Z  2018-05-01T00:00:00.000Z   \n",
-       "152335  2018-06-12T00:00:00.000Z  2018-08-01T00:00:00.000Z   \n",
-       "39642   2019-07-15T00:00:00.000Z  2019-07-01T00:00:00.000Z   \n",
-       "41452   2017-10-26T00:00:00.000Z  2017-12-01T00:00:00.000Z   \n",
-       "183510  2019-05-14T00:00:00.000Z  2019-04-01T00:00:00.000Z   \n",
-       "\n",
-       "                LICENSE_END_DATE LICENSECATEGORY LICENSESTATUS   LATITUDE  \\\n",
-       "184581  2021-05-31T00:00:00.000Z      Restaurant        Active  38.909455   \n",
-       "45403   2022-11-30T00:00:00.000Z      Restaurant        Active  38.909408   \n",
-       "154840  2020-11-30T00:00:00.000Z      Restaurant        Active  38.909492   \n",
-       "146894  2020-02-28T00:00:00.000Z   Food Products        Active  38.909343   \n",
-       "154097  2021-06-30T00:00:00.000Z      Restaurant        Active  38.909440   \n",
-       "45475   2020-04-30T00:00:00.000Z      Restaurant        Active  38.909490   \n",
-       "152335  2020-07-31T00:00:00.000Z      Restaurant        Active  38.909387   \n",
-       "39642   2021-06-30T00:00:00.000Z    Delicatessen        Active  38.909425   \n",
-       "41452   2019-11-30T00:00:00.000Z      Restaurant        Active  38.909274   \n",
-       "183510  2021-03-31T00:00:00.000Z      Restaurant        Active  38.909274   \n",
-       "\n",
-       "        LONGITUDE  \n",
-       "184581 -77.034073  \n",
-       "45403  -77.033928  \n",
-       "154840 -77.033565  \n",
-       "146894 -77.032850  \n",
-       "154097 -77.032232  \n",
-       "45475  -77.031702  \n",
-       "152335 -77.032224  \n",
-       "39642  -77.031698  \n",
-       "41452  -77.032279  \n",
-       "183510 -77.032279  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## Filtering dataset to a specific section of P Street NW to check if a \n",
-    "##recently open business (Philips Seafood) is included in the dataset\n",
-    "P_St = dc_food[(dc_food.LATITUDE.apply(lambda x: round(x, 3)) == 38.909) & \n",
-    "                  (dc_food.LONGITUDE.apply(lambda x: round(x, 3)) >= -77.035) & \n",
-    "                  (dc_food.LONGITUDE.apply(lambda x: round(x, 3)) <= -77.032)]\n",
-    "\n",
-    "## Philips Seafood opened in June and is shown as the 1st record\n",
-    "P_St[P_St['LICENSESTATUS'] == 'Active'][cols].sort_values(by=['SITE_ADDRESS'], ascending = False).head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1295,30 +1067,6 @@
        "      <td>38.903141</td>\n",
        "      <td>-77.018701</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>136959</th>\n",
-       "      <td>1045 5TH ST NW</td>\n",
-       "      <td>CHIPOTLE MEXICAN GRILL</td>\n",
-       "      <td>2019-07-02T00:00:00.000Z</td>\n",
-       "      <td>2017-10-01T00:00:00.000Z</td>\n",
-       "      <td>2019-09-30T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Ready to Renew</td>\n",
-       "      <td>38.903061</td>\n",
-       "      <td>-77.018704</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>134099</th>\n",
-       "      <td>1025 5TH ST NW</td>\n",
-       "      <td>BUSBOYS AND POETS- 5TH &amp; K</td>\n",
-       "      <td>2019-05-01T00:00:00.000Z</td>\n",
-       "      <td>2017-04-01T00:00:00.000Z</td>\n",
-       "      <td>2019-03-31T00:00:00.000Z</td>\n",
-       "      <td>Restaurant</td>\n",
-       "      <td>Expired</td>\n",
-       "      <td>38.902815</td>\n",
-       "      <td>-77.018704</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
@@ -1365,8 +1113,6 @@
        "37333      400 K ST NW   JOE & THE JUICE NEW YORK LLC   \n",
        "163830  1065 5TH ST NW         SWEETGREEN LOGAN, LLC.   \n",
        "161583  1055 5TH ST NW      FIFTH STREET HARDWARD LLC   \n",
-       "136959  1045 5TH ST NW         CHIPOTLE MEXICAN GRILL   \n",
-       "134099  1025 5TH ST NW     BUSBOYS AND POETS- 5TH & K   \n",
        "\n",
        "              LICENSE_ISSUE_DATE        LICENSE_START_DATE  \\\n",
        "41944   2018-05-03T00:00:00.000Z  2018-05-01T00:00:00.000Z   \n",
@@ -1409,8 +1155,6 @@
        "37333   2018-09-17T00:00:00.000Z  2018-09-01T00:00:00.000Z   \n",
        "163830  2018-06-06T00:00:00.000Z  2018-08-01T00:00:00.000Z   \n",
        "161583  2019-04-07T00:00:00.000Z  2017-03-01T00:00:00.000Z   \n",
-       "136959  2019-07-02T00:00:00.000Z  2017-10-01T00:00:00.000Z   \n",
-       "134099  2019-05-01T00:00:00.000Z  2017-04-01T00:00:00.000Z   \n",
        "\n",
        "                LICENSE_END_DATE LICENSECATEGORY   LICENSESTATUS   LATITUDE  \\\n",
        "41944   2020-04-30T00:00:00.000Z      Restaurant          Active  38.901924   \n",
@@ -1453,8 +1197,6 @@
        "37333   2020-08-31T00:00:00.000Z    Delicatessen          Active  38.902198   \n",
        "163830  2020-07-31T00:00:00.000Z    Delicatessen          Active  38.903213   \n",
        "161583  2019-02-28T00:00:00.000Z   Food Products         Expired  38.903141   \n",
-       "136959  2019-09-30T00:00:00.000Z      Restaurant  Ready to Renew  38.903061   \n",
-       "134099  2019-03-31T00:00:00.000Z      Restaurant         Expired  38.902815   \n",
        "\n",
        "        LONGITUDE  \n",
        "41944  -77.018643  \n",
@@ -1496,12 +1238,10 @@
        "46814  -77.016901  \n",
        "37333  -77.016445  \n",
        "163830 -77.018704  \n",
-       "161583 -77.018701  \n",
-       "136959 -77.018704  \n",
-       "134099 -77.018704  "
+       "161583 -77.018701  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1516,12 +1256,12 @@
     "                  (dc_food.LONGITUDE.apply(lambda x: round(x, 3)) <= -77.015)]\n",
     "\n",
     "## there's a ton of records for 490 L St Nw w/ same entity name, which is making it hard to review\n",
-    "K_St_1[K_St_1['LICENSE_END_YR'] >= 2016][cols].sort_values(by=['SITE_ADDRESS'], ascending = False).head(100)"
+    "K_St_1[K_St_1['LICENSE_END_YR'] >= 2016][cols].sort_values(by=['SITE_ADDRESS'], ascending = False).head(40)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1533,14 +1273,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "## I'm going to limit the dataset to just the columns that I am interesetd in so that the duplicate \n",
     "## cancelled records do not skew my analysis\n",
-    "cols = [\n",
-    "        ,'SITE_ADDRESS','ENTITY_NAME'\n",
+    "cols = ['SITE_ADDRESS','ENTITY_NAME'\n",
     "        ,'LICENSE_ISSUE_DATE','LICENSE_START_DATE','LICENSE_END_DATE'\n",
     "        ,'LICENSECATEGORY','LICENSESTATUS'\n",
     "        , 'LATITUDE', 'LONGITUDE'\n",
@@ -1553,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1564,7 +1303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1584,7 +1323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 19,
    "metadata": {
     "scrolled": true
    },
@@ -2001,7 +1740,7 @@
        "[12 rows x 21 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2015,13 +1754,13 @@
     "                  (dc_food_final.LONGITUDE.apply(lambda x: round(x, 3)) >= -77.019) & \n",
     "                  (dc_food_final.LONGITUDE.apply(lambda x: round(x, 3)) <= -77.017)]\n",
     "\n",
-    "## there's a ton of records for 490 L St Nw w/ same entity name, which is making it hard to review\n",
+    "## L'Hommage Bistro license ends 7/2017 and La Betty starts 1/2019\n",
     "K_St[K_St['LICENSE_END_YR'] >= 2016][cols].sort_values(by=['SITE_ADDRESS'], ascending = True).head(100)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -2030,7 +1769,7 @@
        "12327"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2050,7 +1789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2269,7 +2008,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2301,7 +2040,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2323,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2332,7 +2071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2343,16 +2082,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "2.535787816842397"
+       "1.119023068745931"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
