Data Inputs + Folder reorg

--- a/emergency_room_maps/choropleth/metric_dataprep.ipynb
+++ b/emergency_room_maps/choropleth/metric_dataprep.ipynb
@@ -8,6 +8,7 @@
    "source": [
     "import pandas as pd\n",
     "import time\n",
+    "import os\n",
     "start_time = time.time()"
    ]
   },
@@ -32,17 +33,44 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\linds\\Documents\\soa_prez_thegist\\choropleth\n"
+     ]
+    }
+   ],
    "source": [
-    "# Load beneficiary, outpatient, and carrier claims files\n",
-    "ben_s1 = pd.read_csv(\"data\\DE1_0_2008_Beneficiary_Summary_File_Sample_1.csv\", low_memory = False)\n",
-    "car_a_s1 = pd.read_csv(\"data\\DE1_0_2008_to_2010_Carrier_Claims_Sample_1A.csv\", low_memory = False)\n",
-    "countyxwalk = pd.read_csv(\"gis_data\\ssa_fips_state_county2011.csv\", low_memory = False)"
+    "hwd = os.getcwd()\n",
+    "print(hwd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load beneficiary, outpatient, and carrier claims files\n",
+    "ben_s1 = pd.read_csv(\"raw_data\\\\DE1_0_2008_Beneficiary_Summary_File_Sample_1.csv\", low_memory = False)\n",
+    "car_a_s1 = pd.read_csv(\"raw_data\\DE1_0_2008_to_2010_Carrier_Claims_Sample_1A.csv\", low_memory = False)\n",
+    "countyxwalk = pd.read_csv(\"gis_data\\\\ssa_fips_state_county2011.csv\", low_memory = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -179,7 +207,7 @@
        "4             180        2008          8"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +221,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -206,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -297,7 +325,7 @@
        "4             31             180"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +446,7 @@
        "1808                      Ocean City, NJ        31         34  "
       ]
      },
-     "execution_count": 12,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -429,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -496,7 +524,7 @@
        "4             31           31180"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -516,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -535,14 +563,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.9363151868184407 minutes\n"
+      "2.7732325037320456 minutes\n"
      ]
     }
    ],
