--- a/emergency_room_maps/isochrone/make_isochrone.ipynb
+++ b/emergency_room_maps/isochrone/make_isochrone.ipynb
@@ -7,6 +7,7 @@
    "outputs": [],
    "source": [
     "#https://github.com/gboeing/osmnx-examples/blob/master/notebooks/13-isolines-isochrones.ipynb\n",
+    "import os\n",
     "import pandas as pd\n",
     "import geopandas as gpd\n",
     "import matplotlib.pyplot as plt\n",
@@ -77,14 +78,41 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\linds\\Documents\\soa_prez_thegist\\isochrone\n"
+     ]
+    }
+   ],
    "source": [
-    "hospitals = pd.read_csv(\"data/nj_hospitals.csv\", low_memory = False)"
+    "hwd = os.getcwd()\n",
+    "print(hwd)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "hospitals = pd.read_csv(\"data\\\\nj_hospitals.csv\", low_memory = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -106,10 +134,11 @@
     }
    ],
    "source": [
-    "## !!! for running process once !!!!\n",
+    "## FOR RUNNING PROCESS ONCE - COMMENT OUT 3 LINES BELOW & UNCOMMENT for i in range(len(hospitals)) line TO CREATE ISOCHRONES FOR ALL LOCATIONS####\n",
     "import numpy as np\n",
     "x = np.arange(0,1)\n",
     "for i in x:\n",
+    "####################################\n",
     "\n",
     "#for i in range(len(hospitals)):\n",
     "\n",
@@ -146,20 +175,20 @@
     "    poly_df = gpd.GeoDataFrame(zip(isochrone_polys,iso_colors, trip_times), columns = ['geometry', 'color', 'drivetime'], crs=\"EPSG:26918\")\n",
     "    poly_df['ER'] = er_name\n",
     "    \n",
-    "    filename = \"gis_data/isochrones/\" + er_name + \".json\"\n",
+    "    filename = \"gis_data\\\\isochrones\\\\\" + er_name + \".json\"\n",
     "    poly_df.to_file(filename, driver=\"GeoJSON\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.5550040721893312 minutes\n"
+      "2.9882041414578757 minutes\n"
      ]
     }
    ],
