--- a/emergency_room_maps/isochrone/plot_isochrone.ipynb
+++ b/emergency_room_maps/isochrone/plot_isochrone.ipynb
@@ -2,11 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#https://github.com/gboeing/osmnx-examples/blob/master/notebooks/13-isolines-isochrones.ipynb\n",
+    "import os\n",
     "import geopandas as gpd\n",
     "import pandas as pd\n",
     "import folium\n",
@@ -18,6 +18,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\linds\\Documents\\soa_prez_thegist\\isochrone\n"
+     ]
+    }
+   ],
+   "source": [
+    "hwd = os.getcwd()\n",
+    "print(hwd)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "os.chdir(\"..\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -26,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -41,11 +68,11 @@
    "source": [
     "x = np.arange(1,73)\n",
     "\n",
-    "all_polys = gpd.read_file('gis_data/isochrones/ER_1.json')\n",
+    "all_polys = gpd.read_file(\"gis_data\\\\isochrones\\\\ER_1.json\")\n",
     "\n",
     "for i in x:\n",
     "    i = i + 1\n",
-    "    one_poly_file = \"gis_data/isochrones/ER_\" + str(i) + \".json\"\n",
+    "    one_poly_file = \"gis_data\\\\isochrones\\\\ER_\" + str(i) + \".json\"\n",
     "\n",
     "    poly_add = gpd.read_file(one_poly_file)\n",
     "\n",
@@ -53,7 +80,7 @@
     "    \n",
     "all_polys = all_polys.sort_values(by=['drivetime'], ascending=False)\n",
     "\n",
-    "all_polys.to_file(\"gis_data/isochrones/all_ER_polys.json\", driver=\"GeoJSON\")\n",
+    "all_polys.to_file(\"gis_data\\\\isochrones\\\\all_ER_polys.json\", driver=\"GeoJSON\")\n",
     "\n",
     "print(73*5)\n",
     "print(len(all_polys))"
@@ -61,11 +88,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_polys = gpd.read_file('gis_data/isochrones/all_ER_polys.json')\n",
+    "all_polys = gpd.read_file(\"gis_data\\\\isochrones\\\\all_ER_polys.json\")\n",
     "\n",
     "## this creates a 400KB file, which is really difficult to use\n",
     "m = folium.Map(location=[40.353944, -74.063478])\n",
@@ -92,7 +119,7 @@
     "    \n",
     ").add_to(m)\n",
     "\n",
-    "m.save('nj_drivetime_all.html')"
+    "m.save(\"isochrone\\\\nj_drivetime_all.html\")"
    ]
   },
   {
@@ -104,16 +131,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "one_poly = gpd.read_file('gis_data/isochrones/ER_1.json')"
+    "one_poly = gpd.read_file(\"gis_data\\\\isochrones\\\\ER_1.json\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -167,7 +194,7 @@
     "\n",
     "print(x[0])\n",
     "\n",
-    "simple_poly.to_file(\"gis_data/isochrones/simple/ER_1_r.json\", driver=\"GeoJSON\") ## polygon is 20% of the size"
+    "simple_poly.to_file(\"gis_data\\\\isochrones\\\\simple\\\\ER_1_r.json\", driver=\"GeoJSON\") ## polygon is 20% of the size"
    ]
   },
   {
@@ -179,25 +206,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
     "x = np.arange(1,74)\n",
     "\n",
     "for i in x:\n",
-    "    one_poly_file = \"gis_data/isochrones/ER_\" + str(i) + \".json\"\n",
+    "    one_poly_file = \"gis_data\\\\isochrones\\\\ER_\" + str(i) + \".json\"\n",
     "    one_poly = gpd.read_file(one_poly_file)\n",
     "    one_poly['geometry'] = one_poly['geometry'].simplify(2, preserve_topology = False)\n",
     "    \n",
-    "    one_poly_file = \"gis_data/isochrones/simple/ER_\" + str(i) + \"_r.json\"\n",
+    "    one_poly_file = \"gis_data\\\\isochrones\\\\simple\\\\ER_\" + str(i) + \"_r.json\"\n",
     "    \n",
     "    one_poly.to_file(one_poly_file, driver=\"GeoJSON\") "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -213,11 +240,11 @@
     "## re-running poly consolidation on the simple polys\n",
     "x = np.arange(1,73)\n",
     "\n",
-    "all_polys = gpd.read_file('gis_data/isochrones/simple/ER_1_r.json')\n",
+    "all_polys = gpd.read_file('gis_data\\\\isochrones\\\\simple\\\\ER_1_r.json')\n",
     "\n",
     "for i in x:\n",
     "    i = i + 1\n",
-    "    one_poly_file = \"gis_data/isochrones/simple/ER_\" + str(i) + \"_r.json\"\n",
+    "    one_poly_file = \"gis_data\\\\isochrones\\\\simple\\\\ER_\" + str(i) + \"_r.json\"\n",
     "\n",
     "    poly_add = gpd.read_file(one_poly_file)\n",
     "\n",
@@ -225,7 +252,7 @@
     "    \n",
     "all_polys = all_polys.sort_values(by=['drivetime'], ascending=False)\n",
     "\n",
-    "all_polys.to_file(\"gis_data/isochrones/simple/all_ER_polys_r.json\", driver=\"GeoJSON\")\n",
+    "all_polys.to_file(\"gis_data\\\\isochrones\\\\simple\\\\all_ER_polys_r.json\", driver=\"GeoJSON\")\n",
     "\n",
     "print(73*5)\n",
     "print(len(all_polys))"
@@ -233,21 +260,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_polys = gpd.read_file('gis_data/isochrones/simple/all_ER_polys_r.json')\n",
+    "all_polys = gpd.read_file(\"gis_data\\\\isochrones\\\\simple\\\\all_ER_polys_r.json\")\n",
     "all_polys['geometry'] = all_polys['geometry'].simplify(2.5, preserve_topology = False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "all_polys = gpd.read_file('gis_data/isochrones/simple/all_ER_polys_r.json')\n",
+    "all_polys = gpd.read_file('gis_data\\\\isochrones\\\\simple\\\\all_ER_polys_r.json')\n",
     "\n",
     "## this creates a 400KB file, which is really difficult to use\n",
     "m = folium.Map(location=[40.353944, -74.063478])\n",
@@ -274,7 +301,7 @@
     "    \n",
     ").add_to(m)\n",
     "\n",
-    "m.save('nj_drivetime_all_simple.html')"
+    "m.save(\"isochrone\\\\nj_drivetime_all_simple.html\")"
    ]
   },
   {
@@ -286,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -307,7 +334,7 @@
     }
    ],
    "source": [
-    "all_polys = gpd.read_file('gis_data/isochrones/simple/all_ER_polys_r.json')\n",
+    "all_polys = gpd.read_file('gis_data\\\\isochrones\\\\simple\\\\all_ER_polys_r.json')\n",
     "\n",
     "trip_times = [5, 10, 15, 20, 25] #in minutes\n",
     "\n",
@@ -344,22 +371,22 @@
     "    \n",
     "        poly_union = gpd.GeoDataFrame([[color,drivetime, ER, u]], columns = ['color', 'drivetime','ER', 'geometry'], crs=\"EPSG:26918\")\n",
     "        \n",
-    "        filename = \"gis_data/isochrones/simple/ER_\" + str(time) + \"_min_r.json\"\n",
+    "        filename = \"gis_data\\\\isochrones\\\\simple/ER_\" + str(time) + \"_min_r.json\"\n",
     "        \n",
     "        poly_union.to_file(filename, driver = \"GeoJSON\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "union_5 = gpd.read_file(\"gis_data/isochrones/simple/ER_5_min_r.json\")\n",
-    "union_10 = gpd.read_file(\"gis_data/isochrones/simple/ER_10_min_r.json\")\n",
-    "union_15 = gpd.read_file(\"gis_data/isochrones/simple/ER_15_min_r.json\")\n",
-    "union_20 = gpd.read_file(\"gis_data/isochrones/simple/ER_20_min_r.json\")\n",
-    "union_25 = gpd.read_file(\"gis_data/isochrones/simple/ER_25_min_r.json\")"
+    "union_5 = gpd.read_file(\"gis_data\\\\isochrones\\\\simple\\\\ER_5_min_r.json\")\n",
+    "union_10 = gpd.read_file(\"gis_data\\\\isochrones\\\\simple\\\\ER_10_min_r.json\")\n",
+    "union_15 = gpd.read_file(\"gis_data\\\\isochrones\\\\simple\\\\ER_15_min_r.json\")\n",
+    "union_20 = gpd.read_file(\"gis_data\\\\isochrones\\\\simple\\\\ER_20_min_r.json\")\n",
+    "union_25 = gpd.read_file(\"gis_data\\\\isochrones\\\\simple\\\\ER_25_min_r.json\")"
    ]
   },
   {
@@ -456,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -540,7 +567,7 @@
     "# add the layer control\n",
     "folium.LayerControl().add_to(m)\n",
     "\n",
-    "m.save('nj_drivetime_union_simple.html')"
+    "m.save(\"isochrone\\\\nj_drivetime_union_simple.html\")"
    ]
   }
  ],
